define src/config directory and its config files

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "heismehrab\\PhpRabbitMq" : "src/"
+            "HeIsMehrab\\PhpRabbitMq\\" : "src/"
         }
     }
 }
